@@ -19,6 +19,7 @@ version <next>:
 - Sample Dump eXchange demuxer
 - abitscope multimedia filter
 - Scenarist Closed Captions demuxer and muxer
+- threshold filter
 
 version 3.2:
 - libopenmpt demuxer
